Reverted changes to use javafx as a module in the jdk instead of a dependency. Let's leave it for September when we'll move to the jdk 25 LTS and we can have more invasive changes, try to remove all preview features etc.